spade-tests/src/snapshots/spade_tests__parser__missing_end_of_range_index_is_error.snap
---
source: spade-tests/src/parser.rs
---
fn top() -> bool {
    let a = [true, true, false];
    a[1..]
}


error: Unexpected `]`, expected expression
  ┌─ testinput:3:10
  │
3 │     a[1..]
  │          ^ expected expression here
